--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ body {
     border-radius: 1rem;
     display: grid;
     gap: 1rem;
-    max-width: 320px;
+    max-width: 20rem;
 }
 
 .card__image {
